Style:styling title element and search bar

--- a/index.html
+++ b/index.html
@@ -7,9 +7,15 @@
     <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
+    <h1>Harry potter Characters</h1>
     <search>
       <form>
-        <input type="search" name="search-bar" id="search-bar" placeholder="search-characters" />
+        <input
+          type="search"
+          name="search-bar"
+          id="search-bar"
+          placeholder="search-characters"
+        />
       </form>
     </search>
   </body>
